# myers_diff

./: .gitmodules  CMakeLists.txt  LICENSE
include/: myers_diff.hpp
src/: array.hpp  myers_diff.cpp
test/: CMakeLists.txt  diff.cpp
